fix:copyright text alignment

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,3 +5,7 @@
   bottom: 0;
   width: 100%;
 }
+
+.rights-align {
+  margin-top: 3.2rem;
+}
